feat(Nodes): enhance wildcard reference handling and improve process data evaluation