@@ -6,9 +6,11 @@ import java.util.List;
 import java.util.Map;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertSame;
 import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 class ProcessExecutionDataTest {
     @Test
@@ -21,13 +23,26 @@ class ProcessExecutionDataTest {
                 )
         ));
 
-        var result = ProcessExecutionData.resolveProcessDataValue(processExecutionData, "person.vorname");
+        var result = ProcessDataValueUtils.resolveProcessDataValue(processExecutionData, "person.vorname");
 
         assertEquals("Ada", result);
     }
 
     @Test
-    void shouldResolveFirstArrayEntryWhenWildcardIsUsed() {
+    void shouldResolveDestinationKeyValueFromArrayRoot() {
+        var result = ProcessDataValueUtils.resolveDestinationKeyValue(
+                List.of(
+                        Map.of("vorname", "Ada"),
+                        Map.of("vorname", "Grace")
+                ),
+                "1.vorname"
+        );
+
+        assertEquals("Grace", result);
+    }
+
+    @Test
+    void shouldRejectImplicitWildcardReads() {
         var processExecutionData = ProcessExecutionData.of(Map.of(
                 ProcessExecutionData.PROCESS_DATA_KEY, Map.of(
                         "personen", List.of(
@@ -37,9 +52,10 @@ class ProcessExecutionDataTest {
                 )
         ));
 
-        var result = ProcessExecutionData.resolveProcessDataValue(processExecutionData, "personen.*.vorname");
-
-        assertEquals("Ada", result);
+        assertThrows(
+                IllegalArgumentException.class,
+                () -> ProcessDataValueUtils.resolveProcessDataValue(processExecutionData, "personen.*.vorname")
+        );
     }
 
     @Test
@@ -53,7 +69,7 @@ class ProcessExecutionDataTest {
                 )
         ));
 
-        var result = ProcessExecutionData.resolveProcessDataValue(processExecutionData, "personen.1.vorname");
+        var result = ProcessDataValueUtils.resolveProcessDataValue(processExecutionData, "personen.1.vorname");
 
         assertEquals("Grace", result);
     }
@@ -75,7 +91,7 @@ class ProcessExecutionDataTest {
                 )
         ));
 
-        var result = ProcessExecutionData.resolveProcessDataValue(
+        var result = ProcessDataValueUtils.resolveProcessDataValue(
                 processExecutionData,
                 "personen.*.adressen.*.strasse",
                 List.of(1, 0)
@@ -101,7 +117,7 @@ class ProcessExecutionDataTest {
                 )
         ));
 
-        var result = ProcessExecutionData.resolveProcessDataValue(
+        var result = ProcessDataValueUtils.resolveProcessDataValue(
                 processExecutionData,
                 "personen.1.adressen.*.strasse",
                 List.of(1)
@@ -111,28 +127,83 @@ class ProcessExecutionDataTest {
     }
 
     @Test
-    void shouldKeepWildcardReadCompatibilityWhenNoExplicitIndicesAreProvided() {
+    void shouldResolveAllExistingWildcardBindings() {
         var processExecutionData = ProcessExecutionData.of(Map.of(
                 ProcessExecutionData.PROCESS_DATA_KEY, Map.of(
                         "personen", List.of(
-                                Map.of("adressen", List.of(
-                                        Map.of("strasse", "First Person Street 0"),
-                                        Map.of("strasse", "First Person Street 1")
-                                )),
-                                Map.of("adressen", List.of(
-                                        Map.of("strasse", "Second Person Street 0"),
-                                        Map.of("strasse", "Second Person Street 1")
-                                ))
+                                Map.of("vorname", "Ada"),
+                                Map.of("vorname", "Grace")
                         )
                 )
         ));
 
-        var result = ProcessExecutionData.resolveProcessDataValue(
+        var result = ProcessDataValueUtils.resolveMatchingProcessDataValues(
                 processExecutionData,
-                "personen.*.adressen.*.strasse"
+                "personen.*.vorname"
         );
 
-        assertEquals("First Person Street 0", result);
+        assertEquals(
+                List.of("personen.0.vorname", "personen.1.vorname"),
+                result.stream().map(ProcessDataValueUtils.ResolvedProcessDataValue::destinationKey).toList()
+        );
+        assertEquals(
+                List.of(List.of(0), List.of(1)),
+                result.stream().map(ProcessDataValueUtils.ResolvedProcessDataValue::wildcardIndices).toList()
+        );
+        assertEquals(
+                List.of("Ada", "Grace"),
+                result.stream().map(ProcessDataValueUtils.ResolvedProcessDataValue::value).toList()
+        );
+    }
+
+    @Test
+    void shouldResolveAllExistingWildcardBindingsFromArrayRoot() {
+        var result = ProcessDataValueUtils.resolveMatchingDestinationKeyValues(
+                List.of(
+                        Map.of("vorname", "Ada"),
+                        Map.of("vorname", "Grace")
+                ),
+                "*.vorname"
+        );
+
+        assertEquals(
+                List.of("0.vorname", "1.vorname"),
+                result.stream().map(ProcessDataValueUtils.ResolvedDestinationKeyValue::destinationKey).toList()
+        );
+        assertEquals(
+                List.of(List.of(0), List.of(1)),
+                result.stream().map(ProcessDataValueUtils.ResolvedDestinationKeyValue::wildcardIndices).toList()
+        );
+        assertEquals(
+                List.of("Ada", "Grace"),
+                result.stream().map(ProcessDataValueUtils.ResolvedDestinationKeyValue::value).toList()
+        );
+    }
+
+    @Test
+    void shouldKeepWildcardBindingWhenLeafValueIsMissing() {
+        var processExecutionData = ProcessExecutionData.of(Map.of(
+                ProcessExecutionData.PROCESS_DATA_KEY, Map.of(
+                        "personen", List.of(
+                                Map.of("alter", 22),
+                                Map.of("name", "Gerda")
+                        )
+                )
+        ));
+
+        var result = ProcessDataValueUtils.resolveMatchingProcessDataValues(
+                processExecutionData,
+                "personen.*.alter"
+        );
+
+        assertEquals(
+                List.of(List.of(0), List.of(1)),
+                result.stream().map(ProcessDataValueUtils.ResolvedProcessDataValue::wildcardIndices).toList()
+        );
+        assertEquals(
+                java.util.Arrays.asList(22, null),
+                result.stream().map(ProcessDataValueUtils.ResolvedProcessDataValue::value).toList()
+        );
     }
 
     @Test
@@ -145,8 +216,8 @@ class ProcessExecutionDataTest {
                 )
         ));
 
-        assertNull(ProcessExecutionData.resolveProcessDataValue(processExecutionData, "personen.1.vorname"));
-        assertNull(ProcessExecutionData.resolveProcessDataValue(processExecutionData, "personen.0.nachname"));
+        assertNull(ProcessDataValueUtils.resolveProcessDataValue(processExecutionData, "personen.1.vorname"));
+        assertNull(ProcessDataValueUtils.resolveProcessDataValue(processExecutionData, "personen.0.nachname"));
     }
 
     @Test
@@ -159,7 +230,7 @@ class ProcessExecutionDataTest {
                 )
         ));
 
-        var result = ProcessExecutionData.resolveProcessDataValue(
+        var result = ProcessDataValueUtils.resolveProcessDataValue(
                 processExecutionData,
                 "personen.*.vorname",
                 List.of(1)
@@ -175,9 +246,19 @@ class ProcessExecutionDataTest {
                 ProcessExecutionData.PROCESS_DATA_KEY, processDataRoot
         ));
 
-        var result = ProcessExecutionData.resolveProcessDataValue(processExecutionData, null);
+        var result = ProcessDataValueUtils.resolveProcessDataValue(processExecutionData, null);
 
         assertSame(processDataRoot, result);
+    }
+
+    @Test
+    void shouldMaterializeWildcardDestinationKeyFromIndices() {
+        var result = ProcessDataValueUtils.materializeDestinationKey(
+                "personen.*.adressen.*.strasse",
+                List.of(1, 0)
+        );
+
+        assertEquals("personen.1.adressen.0.strasse", result);
     }
 
     @Test
@@ -186,15 +267,19 @@ class ProcessExecutionDataTest {
 
         assertThrows(
                 IllegalArgumentException.class,
-                () -> ProcessExecutionData.resolveProcessDataValue(processExecutionData, "personen.*.vorname", List.of())
+                () -> ProcessDataValueUtils.resolveProcessDataValue(processExecutionData, "personen.*.vorname", List.of())
         );
         assertThrows(
                 IllegalArgumentException.class,
-                () -> ProcessExecutionData.resolveProcessDataValue(processExecutionData, "personen.*.vorname", List.of(0, 1))
+                () -> ProcessDataValueUtils.resolveProcessDataValue(processExecutionData, "personen.*.vorname", List.of(0, 1))
         );
         assertThrows(
                 IllegalArgumentException.class,
-                () -> ProcessExecutionData.resolveProcessDataValue(processExecutionData, "personen.*.vorname", List.of(-1))
+                () -> ProcessDataValueUtils.resolveProcessDataValue(processExecutionData, "personen.*.vorname", List.of(-1))
+        );
+        assertThrows(
+                IllegalArgumentException.class,
+                () -> ProcessDataValueUtils.resolveProcessDataValue(processExecutionData, "person.vorname", List.of(0))
         );
     }
 
@@ -202,7 +287,7 @@ class ProcessExecutionDataTest {
     void shouldWriteNestedObjectValueIntoProcessDataRoot() {
         var processExecutionData = new ProcessExecutionData();
 
-        ProcessExecutionData.writeProcessDataValue(processExecutionData, "person.vorname", "Ada");
+        ProcessDataValueUtils.writeProcessDataValue(processExecutionData, "person.vorname", "Ada");
 
         assertEquals(
                 Map.of(
@@ -215,22 +300,34 @@ class ProcessExecutionDataTest {
     }
 
     @Test
-    void shouldWriteExplicitArrayIndexAndGrowSparseArray() {
-        var processExecutionData = new ProcessExecutionData();
-
-        ProcessExecutionData.writeProcessDataValue(processExecutionData, "personen.1.vorname", "Grace");
+    void shouldWriteDestinationKeyValueIntoArrayRoot() {
+        var result = ProcessDataValueUtils.writeDestinationKeyValue(null, "1.vorname", "Grace");
 
         assertEquals(
-                List.of(
+                java.util.Arrays.asList(
                         null,
                         Map.of("vorname", "Grace")
                 ),
-                processExecutionData.getProcessData().get("personen")
+                result
         );
     }
 
     @Test
-    void shouldBroadcastWildcardWriteToAllExistingArrayEntries() {
+    void shouldWriteExplicitArrayIndexAndGrowSparseArray() {
+        var processExecutionData = new ProcessExecutionData();
+
+        ProcessDataValueUtils.writeProcessDataValue(processExecutionData, "personen.1.vorname", "Grace");
+
+        assertEquals(2, ((List<?>) processExecutionData.getProcessData().get("personen")).size());
+
+        @SuppressWarnings("unchecked")
+        var personen = (List<Object>) processExecutionData.getProcessData().get("personen");
+        assertNull(personen.get(0));
+        assertEquals(Map.of("vorname", "Grace"), personen.get(1));
+    }
+
+    @Test
+    void shouldRejectImplicitWildcardWrites() {
         var processExecutionData = ProcessExecutionData.of(Map.of(
                 ProcessExecutionData.PROCESS_DATA_KEY, Map.of(
                         "personen", List.of(
@@ -240,19 +337,14 @@ class ProcessExecutionDataTest {
                 )
         ));
 
-        ProcessExecutionData.writeProcessDataValue(processExecutionData, "personen.*.vorname", "Ada");
-
-        assertEquals(
-                List.of(
-                        Map.of("nachname", "Lovelace", "vorname", "Ada"),
-                        Map.of("nachname", "Hopper", "vorname", "Ada")
-                ),
-                processExecutionData.getProcessData().get("personen")
+        assertThrows(
+                IllegalArgumentException.class,
+                () -> ProcessDataValueUtils.writeProcessDataValue(processExecutionData, "personen.*.vorname", "Ada")
         );
     }
 
     @Test
-    void shouldWriteWildcardValueOnlyToSelectedIndices() {
+    void shouldWriteWildcardValueUsingExplicitIndexBinding() {
         var processExecutionData = ProcessExecutionData.of(Map.of(
                 ProcessExecutionData.PROCESS_DATA_KEY, Map.of(
                         "personen", List.of(
@@ -262,18 +354,16 @@ class ProcessExecutionDataTest {
                 )
         ));
 
-        ProcessExecutionData.writeProcessDataValue(
+        ProcessDataValueUtils.writeProcessDataValue(
                 processExecutionData,
                 "personen.*.vorname",
                 "Updated",
-                List.of(1, 3)
+                List.of(1)
         );
 
         assertEquals(
                 List.of(
                         Map.of("vorname", "Ada"),
-                        Map.of("vorname", "Updated"),
-                        null,
                         Map.of("vorname", "Updated")
                 ),
                 processExecutionData.getProcessData().get("personen")
@@ -281,16 +371,233 @@ class ProcessExecutionDataTest {
     }
 
     @Test
-    void shouldLeaveEmptyArrayUntouchedWhenBroadcastingWildcardWrite() {
+    void shouldWriteNestedWildcardValueUsingExplicitIndexBindings() {
+        var processExecutionData = new ProcessExecutionData();
+
+        ProcessDataValueUtils.writeProcessDataValue(
+                processExecutionData,
+                "personen.*.adressen.*.strasse",
+                "Updated",
+                List.of(1, 2)
+        );
+
+        @SuppressWarnings("unchecked")
+        var personen = (List<Object>) processExecutionData.getProcessData().get("personen");
+        assertEquals(2, personen.size());
+        assertNull(personen.get(0));
+
+        @SuppressWarnings("unchecked")
+        var secondPerson = (Map<String, Object>) personen.get(1);
+        @SuppressWarnings("unchecked")
+        var adressen = (List<Object>) secondPerson.get("adressen");
+        assertEquals(3, adressen.size());
+        assertNull(adressen.get(0));
+        assertNull(adressen.get(1));
+        assertEquals(Map.of("strasse", "Updated"), adressen.get(2));
+    }
+
+    @Test
+    void shouldRemoveNestedObjectValueWithoutCleaningParents() {
         var processExecutionData = ProcessExecutionData.of(Map.of(
                 ProcessExecutionData.PROCESS_DATA_KEY, Map.of(
-                        "personen", new java.util.ArrayList<>()
+                        "person", Map.of(
+                                "firstName", "Ada"
+                        )
                 )
         ));
 
-        ProcessExecutionData.writeProcessDataValue(processExecutionData, "personen.*.vorname", "Ada");
+        var removed = ProcessDataValueUtils.removeProcessDataValue(
+                processExecutionData,
+                "person.firstName",
+                false
+        );
 
-        assertEquals(List.of(), processExecutionData.getProcessData().get("personen"));
+        assertTrue(removed);
+        assertEquals(
+                Map.of(
+                        "person", Map.of()
+                ),
+                processExecutionData.getProcessData()
+        );
+    }
+
+    @Test
+    void shouldRemoveNestedObjectValueAndPruneEmptyContainers() {
+        var processExecutionData = ProcessExecutionData.of(Map.of(
+                ProcessExecutionData.PROCESS_DATA_KEY, Map.of(
+                        "person", Map.of(
+                                "firstName", "Ada"
+                        )
+                )
+        ));
+
+        var removed = ProcessDataValueUtils.removeProcessDataValue(
+                processExecutionData,
+                "person.firstName",
+                true
+        );
+
+        assertTrue(removed);
+        assertEquals(
+                Map.of(),
+                processExecutionData.getProcessData()
+        );
+    }
+
+    @Test
+    void shouldRemoveExplicitArrayElementAndCompactList() {
+        var processExecutionData = ProcessExecutionData.of(Map.of(
+                ProcessExecutionData.PROCESS_DATA_KEY, Map.of(
+                        "personen", List.of(
+                                "Ada",
+                                "Grace",
+                                "Margaret"
+                        )
+                )
+        ));
+
+        var removed = ProcessDataValueUtils.removeProcessDataValue(
+                processExecutionData,
+                "personen.1",
+                false
+        );
+
+        assertTrue(removed);
+        assertEquals(
+                Map.of(
+                        "personen", List.of("Ada", "Margaret")
+                ),
+                processExecutionData.getProcessData()
+        );
+    }
+
+    @Test
+    void shouldRemoveWildcardLeafFromAllArrayItemsWithoutCleanup() {
+        var processExecutionData = ProcessExecutionData.of(Map.of(
+                ProcessExecutionData.PROCESS_DATA_KEY, Map.of(
+                        "personen", List.of(
+                                Map.of("alter", 22),
+                                Map.of("alter", 41)
+                        )
+                )
+        ));
+
+        var removed = ProcessDataValueUtils.removeProcessDataValue(
+                processExecutionData,
+                "personen.*.alter",
+                false
+        );
+
+        assertTrue(removed);
+        assertEquals(
+                Map.of(
+                        "personen", List.of(
+                                Map.of(),
+                                Map.of()
+                        )
+                ),
+                processExecutionData.getProcessData()
+        );
+    }
+
+    @Test
+    void shouldRemoveWildcardLeafFromAllArrayItemsAndPruneEmptyContainers() {
+        var processExecutionData = ProcessExecutionData.of(Map.of(
+                ProcessExecutionData.PROCESS_DATA_KEY, Map.of(
+                        "personen", List.of(
+                                Map.of("alter", 22),
+                                Map.of("alter", 41)
+                        )
+                )
+        ));
+
+        var removed = ProcessDataValueUtils.removeProcessDataValue(
+                processExecutionData,
+                "personen.*.alter",
+                true
+        );
+
+        assertTrue(removed);
+        assertEquals(
+                Map.of(),
+                processExecutionData.getProcessData()
+        );
+    }
+
+    @Test
+    void shouldRemoveWildcardLeafFromListAndPruneParentContainer() {
+        var processExecutionData = ProcessExecutionData.of(Map.of(
+                ProcessExecutionData.PROCESS_DATA_KEY, Map.of(
+                        "personen", List.of(
+                                Map.of("name", "Ada"),
+                                Map.of("name", "Grace")
+                        )
+                )
+        ));
+
+        var removed = ProcessDataValueUtils.removeProcessDataValue(
+                processExecutionData,
+                "personen.*",
+                true
+        );
+
+        assertTrue(removed);
+        assertEquals(
+                Map.of(),
+                processExecutionData.getProcessData()
+        );
+    }
+
+    @Test
+    void shouldRemoveWildcardValueUsingExplicitIndexBinding() {
+        var processExecutionData = ProcessExecutionData.of(Map.of(
+                ProcessExecutionData.PROCESS_DATA_KEY, Map.of(
+                        "personen", List.of(
+                                Map.of("alter", 22),
+                                Map.of("alter", 41)
+                        )
+                )
+        ));
+
+        var removed = ProcessDataValueUtils.removeProcessDataValue(
+                processExecutionData,
+                "personen.*.alter",
+                true,
+                List.of(1)
+        );
+
+        assertTrue(removed);
+        assertEquals(
+                Map.of(
+                        "personen", List.of(
+                                Map.of("alter", 22)
+                        )
+                ),
+                processExecutionData.getProcessData()
+        );
+    }
+
+    @Test
+    void shouldReturnFalseWhenRemovingMissingPath() {
+        var processExecutionData = ProcessExecutionData.of(Map.of(
+                ProcessExecutionData.PROCESS_DATA_KEY, Map.of(
+                        "person", Map.of("firstName", "Ada")
+                )
+        ));
+
+        var removed = ProcessDataValueUtils.removeProcessDataValue(
+                processExecutionData,
+                "person.lastName",
+                true
+        );
+
+        assertFalse(removed);
+        assertEquals(
+                Map.of(
+                        "person", Map.of("firstName", "Ada")
+                ),
+                processExecutionData.getProcessData()
+        );
     }
 
     @Test
@@ -304,19 +611,31 @@ class ProcessExecutionDataTest {
 
         assertThrows(
                 IllegalArgumentException.class,
-                () -> ProcessExecutionData.writeProcessDataValue(processExecutionData, "personen[0].vorname", "Ada")
+                () -> ProcessDataValueUtils.writeProcessDataValue(processExecutionData, "personen[0].vorname", "Ada")
         );
         assertThrows(
                 IllegalStateException.class,
-                () -> ProcessExecutionData.writeProcessDataValue(processExecutionData, "person.vorname", "Ada")
+                () -> ProcessDataValueUtils.writeProcessDataValue(processExecutionData, "person.vorname", "Ada")
         );
         assertThrows(
                 IllegalStateException.class,
-                () -> ProcessExecutionData.writeProcessDataValue(processExecutionData, "personen.0.vorname", "Ada")
+                () -> ProcessDataValueUtils.writeProcessDataValue(processExecutionData, "personen.0.vorname", "Ada")
         );
         assertThrows(
                 IllegalArgumentException.class,
-                () -> ProcessExecutionData.writeProcessDataValue(processExecutionData, "person.vorname", "Ada", List.of(0))
+                () -> ProcessDataValueUtils.writeProcessDataValue(processExecutionData, "person.vorname", "Ada", List.of(0))
+        );
+        assertThrows(
+                IllegalArgumentException.class,
+                () -> ProcessDataValueUtils.writeProcessDataValue(processExecutionData, "personen.*.vorname", "Ada", List.of())
+        );
+        assertThrows(
+                IllegalArgumentException.class,
+                () -> ProcessDataValueUtils.removeProcessDataValue(processExecutionData, "personen[0].vorname", true)
+        );
+        assertThrows(
+                IllegalArgumentException.class,
+                () -> ProcessDataValueUtils.removeProcessDataValue(processExecutionData, "personen.*.vorname", true, List.of())
         );
     }
 }
